[gd_scene load_steps=2 format=3 uid="uid://dkkhbf7y08prw"]

[ext_resource type="Script" uid="uid://iut05eg6er7k" path="res://scripts/core/ActionMode.gd" id="1_act"]

[node name="ActionMode" type="Node2D"]
script = ExtResource("1_act")

[node name="WorldContainer" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="StatusLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -11.5
offset_right = 200.0
offset_bottom = 11.5
grow_vertical = 2
text = "ACTION PHASE"

[node name="TimeLabel" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -11.5
offset_right = 50.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "00:00:00"

[node name="AbortButton" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -15.5
offset_right = -20.0
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "ABORT"

[connection signal="pressed" from="CanvasLayer/Panel/AbortButton" to="." method="_on_abort_pressed"]
